--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ ipykernel>=6.25.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
 tqdm>=4.66.0
+
+#FastAPI
+fastapi 
+uvicorn 
+python-multipart
+pdfplumber
+spacy
