fix the CI/CD workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build Frontend Docker Image
-      run: docker build -t job-roles-frontend:latest -f Dockerfile.frontend ./frontend
+      run: docker build -t job-roles-frontend:latest -f Dockerfile.frontend .
